<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle">

    <ProgressBar android:id="@+id/lost_progress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:textSize="@dimen/title_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/userNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                    <requestFocus/>
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password2Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/passwordHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textAutoCorrect"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/middleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:textColorHint="@color/white_color">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/cityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/main_button"
                    android:completionThreshold="1"
                    android:textColorHint="@color/white_color">
                </AutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userAgreement"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/agreement"
                    android:gravity="end"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/accept_agreement"
                    android:id="@+id/iAgreeCheckBox"
                    android:gravity="start"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="@dimen/main_button"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
</LinearLayout>