<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:divider="?android:dividerHorizontal"
              android:showDividers="middle">

    <ProgressBar android:id="@+id/pbProgress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/citiesPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:completionThreshold="1"
                    android:textColorHint="@color/white_color"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/regionsPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/region"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:completionThreshold="1"
                    android:textColorHint="@color/white_color"
                    android:visibility="gone"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputLayout android:layout_weight="1"
                                                               android:layout_width="0dp"
                                                               android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/white_color"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/addressImage"
                    android:layout_marginLeft="-60dp"
                    style="?android:buttonBarButtonStyle"
                    android:paddingBottom="5dp"
                    android:src="@android:drawable/ic_menu_mylocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destination"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:completionThreshold="1"
                    android:textColorHint="@color/white_color"/>
            </android.support.design.widget.TextInputLayout>

            <!--<LinearLayout
                android:id="@+id/destLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    android:text="@string/destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_weight=".3"
                    android:gravity="end"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"/>

                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight=".7"
                    android:completionThreshold="1"
                    android:inputType="textAutoComplete"/>

            </LinearLayout>-->

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/pricesPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_price"
                    android:padding="8dp"
                    android:spinnerMode="dialog"
                    android:textColorHint="@color/white_color"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

            <!--<LinearLayout
                android:id="@+id/priceLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/car_price"
                    android:textColor="#ffffff"
                    android:layout_weight=".3"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pricesPicker"
                    android:spinnerMode="dialog"
                    android:layout_weight=".7"/>

            </LinearLayout>-->

            <TextView
                android:id="@+id/filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needs_from"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llFilters"
                android:paddingTop="5.0px"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/personsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/persons"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"

                    android:singleLine="true"
                    android:textColorHint="@color/white_color"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  style="?android:buttonBarStyle"
                  android:divider="?android:dividerVertical"
                  android:showDividers="middle">

        <Button
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="@dimen/main_button"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/requestSend"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/request_taxi"
            android:textSize="@dimen/main_button"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>